# Makefile.am for the ropp_io data directory
# ==========================================

EXTRA_DIST = README                   \
             ropp_thin_asglog-247.dat \
             ropp_thin_asglin-247.dat \
             ropp_thin_lin-247.dat    \
             ropp_thin_log-247.dat    \
             ropp_thin_eum-247.dat    \
             ropp_thin_none.dat       \
             ropp_thin_sample-250.dat \
             ropp_thin_sglog-247.dat  \
             ropp_thin_sglin-247.dat  \
             ropp_test.nc             \
             ropp_test.bfr            \
             ropp_test.ecbfr          \
             ropp_testb.nc            \
             ropp_testm.nc            \
             ropp_test2d.nc           \
             gfz_test.dat             \
             gfz_test.dsc             \
             gfz_test.nc              \
             ucar_test.nc             \
             ucar_testr.nc            \
             eum_test.n4              \
             an_20121001000000_T+0.grib    \
             fc_20121001000000_T+6.grib    \
             fc_20121001000000_T+12.grib   \
             hy_20121001000000_T+0.nml_ref \
             hy_20121001000000_T+0.nc_ref \
             eum_test_l.nc_ref \
             eum_test_l.bfr_ref
